[package]
name = "rustykey-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.26"
nix = { version = "0.30", features = ["mount", "sched", "user", "fs"] }
udev = "0.9"
sha2 = "0.10"
uuid = { version = "1.4", features = ["v4"] }
machine-uid = "0.5"
bincode = "2.0"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false  }
ring = "0.17"
chrono = {version = "0.4", features = ["serde"]}
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }