[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["serde"] }
bincode = { version = "2.0", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.10"
machine-uid = "0.5"
chrono = {version = "0.4", features = ["serde"]}